# goma-social

./: .gitignore  README.md  README.md.bak  TODO.md  reescrita.md
.github/workflows/: backend-ci.yml
backend/: .env.example  Dockerfile  cola-docker-dev.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
backend/app/: constants.py  database.py  exceptions.py  main.py  models.py  schemas.py  security.py  settings.py  validators.py
backend/app/routers/: auth.py  friends.py  friendships.py  post.py  posts.py  profiles.py  users.py
backend/app/schemas/: __init__.py  common.py  friendships.py  messages.py  pagination.py  post.py  posts.py  profile.py  profiles.py  user.py  users.py  validators.py
backend/app/services/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 1398cd5931da_user_username_unique.py  37b6825f3e20_add_table_profile_and_user_relationship.py  800ba087fa56_delete_user_on_cascade_on_friendship.py  81b93364be47_add_table_user.py  82cc840c58f9_add_field_block_by_at_friendshio_table.py  92e3783a29f6_create_friendship.py  a249d9e8b702_.py  a5ee7d2ec5cf_add_constraint_to_check_ordered_id_to_.py  b905789f5380_update_field_password.py  e1780c25080c_adiciona_request_by_na_friendship.py  e1e9b891a485_add_table_post.py  e547937f3a8c_add_email_in_user.py  f032c8b889c2_add_timestamps_to_table_user.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_database.py  test_exceptions.py  test_friend.py  test_friends.py  test_main.py  test_posts.py  test_profiles.py  test_security.py  test_user.py  test_users.py
docs/: TODO.md  compliance-e-moderacao.md  diretrizes-e-filosofia.md  funcionalidades.md  ideias.md  quick-start-dev.md  roadmap-completo.md
docs/docs-pending-revision/: diretrizes-e-filosofia.md  funcionalidades.md
